--- a/src/sx/ip/resources/fxml/FXMLNewProxy.fxml
+++ b/src/sx/ip/resources/fxml/FXMLNewProxy.fxml
@@ -22,10 +22,12 @@ limitations under the License.
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="475.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLNewProxyController">
@@ -73,7 +75,6 @@ limitations under the License.
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
       </JFXButton>
-      <JFXProgressBar fx:id="progressBar" progress="0.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <AnchorPane layoutX="30.0" layoutY="100.0" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="90.0">
          <children>
             <Label alignment="CENTER" layoutX="119.0" prefHeight="25.0" prefWidth="155.0" text="New Proxy" textAlignment="JUSTIFY" textFill="#707070" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0">
@@ -89,50 +90,106 @@ limitations under the License.
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="29.0" layoutY="115.0" prefHeight="90.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9; -fx-border-radius: 5;" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="130.0">
-         <children>
-            <ImageView fitHeight="32.9" fitWidth="36.5" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="30.0">
-               <image>
-                  <Image url="@../imgs/coins.png" />
-               </image>
-            </ImageView>
-            <Label text="50 IPSX" textFill="#2aace0" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="30.0">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <Label text="60 min" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="56.0" />
-            <Label text="100 MB" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="40.0" />
-            <Label layoutX="48.0" layoutY="13.0" text="Silver Pack" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="25.0">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <JFXButton AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="39.0" layoutY="125.0" prefHeight="90.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9; -fx-border-radius: 5;" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="237.0">
-         <children>
-            <ImageView fitHeight="32.9" fitWidth="36.5" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="30.0">
-               <image>
-                  <Image url="@../imgs/coins.png" />
-               </image>
-            </ImageView>
-            <Label text="100 IPSX" textFill="#2aace0" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="30.0">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <Label text="1 day" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="56.0" />
-            <Label text="500 MB" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="40.0" />
-            <Label layoutX="48.0" layoutY="13.0" text="Gold Pack" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="25.0">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <JFXButton AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-         </children>
-      </AnchorPane>
+      <ScrollPane hbarPolicy="NEVER" layoutX="30.0" layoutY="132.0" prefHeight="362.0" prefWidth="417.0" style="-fx-background-color: transparent;" stylesheets="@../styles/scrollpane.css" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0" AnchorPane.topAnchor="131.0">
+         <content>
+            <VBox prefHeight="360.0" prefWidth="413.0" spacing="15.0">
+               <children>
+                  <AnchorPane prefHeight="90.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9; -fx-border-radius: 5;">
+                     <children>
+                        <ImageView fitHeight="32.9" fitWidth="36.5" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="30.0">
+                           <image>
+                              <Image url="@../imgs/coins.png" />
+                           </image>
+                        </ImageView>
+                        <Label text="50 IPSX" textFill="#2aace0" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="30.0">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <Label text="60 min" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="56.0" />
+                        <Label text="100 MB" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="40.0" />
+                        <Label layoutX="48.0" layoutY="13.0" text="Silver Pack" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="25.0">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <JFXButton fx:id="btnSilver" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane prefHeight="90.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9; -fx-border-radius: 5;">
+                     <children>
+                        <ImageView fitHeight="32.9" fitWidth="36.5" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="30.0">
+                           <image>
+                              <Image url="@../imgs/coins.png" />
+                           </image>
+                        </ImageView>
+                        <Label text="100 IPSX" textFill="#2aace0" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="30.0">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <Label text="1 day" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="56.0" />
+                        <Label text="500 MB" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="40.0" />
+                        <Label layoutX="48.0" layoutY="13.0" text="Gold Pack" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="25.0">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <JFXButton fx:id="btnGold" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane prefHeight="90.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9; -fx-border-radius: 5;">
+                     <children>
+                        <ImageView fitHeight="32.9" fitWidth="36.5" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="30.0">
+                           <image>
+                              <Image url="@../imgs/coins.png" />
+                           </image>
+                        </ImageView>
+                        <Label text="200 IPSX" textFill="#2aace0" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="30.0">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <Label text="7 days" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="56.0" />
+                        <Label text="1024 MB" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="40.0" />
+                        <Label layoutX="48.0" layoutY="13.0" text="Platinum Pack" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="25.0">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <JFXButton fx:id="btnPlatinum" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane prefHeight="90.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9; -fx-border-radius: 5;">
+                     <children>
+                        <ImageView fitHeight="32.9" fitWidth="36.5" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="30.0">
+                           <image>
+                              <Image url="@../imgs/coins.png" />
+                           </image>
+                        </ImageView>
+                        <Label text="500 IPSX" textFill="#2aace0" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="30.0">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <Label text="30 days" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="56.0" />
+                        <Label text="10240 MB" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="40.0" />
+                        <Label layoutX="48.0" layoutY="13.0" text="Diamond Pack" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="25.0">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Label>
+                        <JFXButton fx:id="btnDiamond" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                     </children>
+                  </AnchorPane>
+               </children>
+               <padding>
+                  <Insets right="16.0" />
+               </padding>
+            </VBox>
+         </content>
+      </ScrollPane>
+      <JFXProgressBar fx:id="progressBar" progress="0.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     </children>
    <opaqueInsets>
       <Insets />
