--- a/src/sx/ip/resources/fxml/FXMLProxyDetails.fxml
+++ b/src/sx/ip/resources/fxml/FXMLProxyDetails.fxml
@@ -82,39 +82,34 @@ limitations under the License.
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="10.0" layoutY="121.0" maxHeight="80.0" minHeight="80.0" prefHeight="80.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9 transparent;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <AnchorPane layoutX="10.0" layoutY="121.0" maxHeight="80.0" minHeight="80.0" prefHeight="80.0" prefWidth="419.0" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Label layoutX="29.0" layoutY="32.0" prefHeight="16.0" prefWidth="390.0" text="10/20 MB" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="31.0">
-               <graphic>
-                  <JFXProgressBar prefHeight="2.0" prefWidth="276.0" progress="0.56" />
-               </graphic></Label>
+            <JFXProgressBar layoutX="29.0" layoutY="36.0" prefHeight="0.0" prefWidth="353.0" progress="0.56" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" />
+            <Label layoutX="384.0" layoutY="15.0" prefHeight="16.0" text="10/20 MB" AnchorPane.rightAnchor="27.0" />
             <Label layoutX="48.0" layoutY="13.0" text="Silver Pack" textFill="#707070" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="53.0" layoutY="48.0" prefHeight="16.0" prefWidth="390.0" text="20 min" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="45.0">
-               <graphic>
-                  <JFXProgressBar prefHeight="2.0" prefWidth="276.0" progress="0.29" />
-               </graphic>
-            </Label>
+            <JFXProgressBar layoutX="29.0" layoutY="31.0" prefHeight="3.0" prefWidth="353.0" progress="0.29" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="27.0" />
+            <Label layoutX="336.0" layoutY="37.0" prefHeight="16.0" text="20 min" AnchorPane.rightAnchor="27.0" />
          </children>
       </AnchorPane>
       <JFXProgressBar fx:id="progressBar" progress="0.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <AnchorPane layoutX="4.0" layoutY="210.0" prefHeight="130.0" prefWidth="419.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <AnchorPane layoutX="2.0" layoutY="188.0" prefHeight="140.0" prefWidth="473.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <AnchorPane>
+            <AnchorPane prefHeight="32.0" prefWidth="471.0" style="-fx-background-color: #6d6d6d52;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <children>
-                  <Label layoutX="119.0" prefHeight="25.0" prefWidth="106.0" text="Proxy" textAlignment="JUSTIFY" textFill="#707070" AnchorPane.leftAnchor="27.0">
+                  <Label prefHeight="25.0" text="Proxy" textAlignment="JUSTIFY" textFill="#707070" AnchorPane.leftAnchor="27.0">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane layoutY="35.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="419.0" style="-fx-background-color: white; -fx-border-color: #c9c9c9 transparent;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <AnchorPane layoutY="45.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="419.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <children>
-                  <Label layoutY="7.0" prefHeight="20.0" prefWidth="38.0" text="Copy" textFill="#2aace0" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="6.0">
+                  <Label alignment="CENTER_RIGHT" layoutY="7.0" prefHeight="20.0" prefWidth="38.0" text="Copy" textFill="#2aace0" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="6.0">
                      <font>
                         <Font size="10.0" />
                      </font></Label>
@@ -122,23 +117,23 @@ limitations under the License.
                   <Label layoutX="48.0" layoutY="13.0" text="12313123123.pac" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="27.0" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutY="66.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9 transparent;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <AnchorPane layoutX="236.0" layoutY="90.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="235.0" style="-fx-background-color: #ffffff;" AnchorPane.rightAnchor="0.0">
+               <children>
+                  <Label text="Port" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="0.0" />
+                  <Label layoutX="48.0" layoutY="13.0" text="532" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="27.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="90.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="235.0" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="0.0">
                <children>
                   <Label text="IP" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="0.0" />
                   <Label layoutX="48.0" layoutY="13.0" text="192.100.5.99" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="27.0" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutY="97.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9 transparent;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-               <children>
-                  <Label text="Port" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="0.0" />
-                  <Label layoutX="48.0" layoutY="13.0" text="532" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="27.0" />
-               </children>
-            </AnchorPane>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="2.0" layoutY="346.0" prefHeight="194.0" prefWidth="473.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
+      <AnchorPane layoutX="2.0" layoutY="346.0" prefHeight="194.0" prefWidth="473.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <AnchorPane>
+            <AnchorPane prefHeight="32.0" prefWidth="471.0" style="-fx-background-color: #6d6d6d52;" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="-1.0">
                <children>
                   <Label layoutX="119.0" prefHeight="25.0" prefWidth="106.0" text="Other Details" textAlignment="JUSTIFY" textFill="#707070" AnchorPane.leftAnchor="27.0">
                      <font>
@@ -147,30 +142,30 @@ limitations under the License.
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane layoutY="35.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="419.0" style="-fx-background-color: white; -fx-border-color: #c9c9c9 transparent;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-               <children>
-                  <Label text="12:00" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="5.0" />
-                  <Label text="20 Apr 2018" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="0.0" />
-                  <Label layoutX="48.0" layoutY="13.0" text="Start Date" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="27.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutY="66.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="419.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9 transparent;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <AnchorPane layoutX="236.0" layoutY="45.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="235.0" style="-fx-background-color: #ffffff;" AnchorPane.rightAnchor="0.0">
                <children>
                   <Label text="13:00" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="5.0" />
                   <Label text="20 Apr 2018" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="0.0" />
                   <Label layoutX="48.0" layoutY="13.0" text="End Date" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="27.0" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutY="97.0" maxHeight="75.0" minHeight="32.0" prefHeight="32.0" prefWidth="473.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9 transparent;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <AnchorPane layoutY="45.0" maxHeight="32.0" minHeight="32.0" prefHeight="32.0" prefWidth="235.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0">
+               <children>
+                  <Label text="12:00" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="5.0" />
+                  <Label text="20 Apr 2018" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="0.0" />
+                  <Label layoutX="48.0" layoutY="13.0" text="Start Date" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="27.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="236.0" layoutY="90.0" maxHeight="75.0" minHeight="32.0" prefHeight="32.0" prefWidth="235.0" style="-fx-background-color: #ffffff;" AnchorPane.rightAnchor="0.0">
+               <children>
+                  <Label text="User IP" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="0.0" />
+                  <Label layoutX="48.0" layoutY="13.0" text="192.32.50.101" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="27.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="90.0" maxHeight="75.0" minHeight="32.0" prefHeight="32.0" prefWidth="235.0" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="0.0">
                <children>
                   <Label text="Country" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="0.0" />
                   <Label layoutX="48.0" layoutY="13.0" text="Brazil" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="27.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="10.0" layoutY="128.0" maxHeight="75.0" minHeight="32.0" prefHeight="32.0" prefWidth="473.0" style="-fx-background-color: #ffffff; -fx-border-color: #c9c9c9 transparent;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-               <children>
-                  <Label text="User IP" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="0.0" />
-                  <Label layoutX="48.0" layoutY="13.0" text="192.32.50.101" textFill="#707070" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="27.0" />
                </children>
             </AnchorPane>
          </children>
